# SFML_Battleship

./: Battleship.cpp  Battleship.h  Board.cpp  Board.h  CMakeLists.txt  ComAI.cpp  ComAI.h  ComPlayer.cpp  ComPlayer.h  Coordinates.cpp  Coordinates.h  Direction.h  Enums.h  HitResult.h  Player.cpp  Player.h  README.md  Rand.cpp  Rand.h  Ship.cpp  Ship.h  TextureManager.cpp  TextureManager.h  main.cpp
Attack States/: AttackState.cpp  AttackState.h  AttackStateManager.cpp  AttackStateManager.h  DestroyState.cpp  DestroyState.h  RandomAttackState.cpp  RandomAttackState.h  SearchState.cpp  SearchState.h
Game States/: EndGameState.cpp  EndGameState.h  MainGameState.cpp  MainGameState.h  MainMenuState.cpp  MainMenuState.h  PlaceShipsState.cpp  PlaceShipsState.h  State.cpp  State.h  StateManager.cpp  StateManager.h
Graphic Assets/: Animation.cpp  Animation.h  Button.cpp  Button.h  HitAnimation.cpp  HitAnimation.h  Menu.cpp  Menu.h  ShipPalette.cpp  ShipPalette.h  Square.cpp  Square.h
